--- a/Serveur_Data_Analysis/nbproject/project.properties
+++ b/Serveur_Data_Analysis/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Serveur_Data_Analysis
-main.class=serveur_data_analysis.mainFrame
+main.class=serveur_data_analysis.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
