modif serveur => mauvaise manip

--- a/Serveur_Data_Analysis/nbproject/project.properties
+++ b/Serveur_Data_Analysis/nbproject/project.properties
@@ -36,10 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/Serveur_Data_Analysis
 endorsed.classpath=
 excludes=
 file.reference.IOCPDA.jar=D:\\Utilisateurs\\Nicolas\\Documents\\ISIL\\Master2\\DeveloppementApplicationAndroid\\Labo\\LaboFinal\\depotGitApplication\\Isil-Data-Scientist\\IOCPDA\\dist\\IOCPDA.jar
+file.reference.REngine.jar=../RServe_JAR/REngine.jar
+file.reference.RserveEngine.jar=../RServe_JAR/RserveEngine.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.IOCPDA.jar}
+    ${file.reference.IOCPDA.jar}:\
+    ${file.reference.REngine.jar}:\
+    ${file.reference.RserveEngine.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
