--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -20,3 +20,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Fichiers à ignorer 
+Serveur_Data_Analysis/build/
+Serveur_Data_Analysis/nbproject/private/
