--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/DesktopApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.apduio.jar=src/JARS/apduio.jar
 file.reference.javacardframework.jar=src/JARS/javacardframework.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javacardframework.jar}
+    ${file.reference.javacardframework.jar}:\
+    ${file.reference.apduio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
