Ajout requête au serveur login carte à puce #2

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -35,7 +35,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javacardframework.jar}:\
-    ${file.reference.apduio.jar}
+    ${file.reference.apduio.jar}:\
+    ${reference.IOCPDA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +66,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.IOCPDA=../IOCPDA
+reference.IOCPDA.jar=${project.IOCPDA}/dist/IOCPDA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
