#8 Rajout chargement du driver JDBC

--- a/DesktopApp/nbproject/project.properties
+++ b/DesktopApp/nbproject/project.properties
@@ -34,13 +34,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.apduio.jar=src/JARS/apduio.jar
+file.reference.IOCPDA.jar=../IOCPDA/dist/IOCPDA.jar
 file.reference.javacardframework.jar=src/JARS/javacardframework.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.javacardframework.jar}:\
     ${file.reference.apduio.jar}:\
-    ${reference.IOCPDA.jar}
+    ${file.reference.IOCPDA.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,8 +78,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=JDK_1.8
-project.IOCPDA=../IOCPDA
-reference.IOCPDA.jar=${project.IOCPDA}/dist/IOCPDA.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
