--- a/Serveur_Data_Analysis/nbproject/project.properties
+++ b/Serveur_Data_Analysis/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/Serveur_Data_Analysis
 endorsed.classpath=
 excludes=
 file.reference.IOCPDA.jar=../IOCPDA/dist/IOCPDA.jar
+file.reference.mysql-connector-java-8.0.18.jar=../BDD/mysql-connector-java-8.0.18/mysql-connector-java-8.0.18.jar
 file.reference.REngine.jar=../RServe_JAR/REngine.jar
 file.reference.RserveEngine.jar=../RServe_JAR/RserveEngine.jar
 includes=**
@@ -43,7 +44,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.REngine.jar}:\
     ${file.reference.IOCPDA.jar}:\
-    ${file.reference.RserveEngine.jar}
+    ${file.reference.RserveEngine.jar}:\
+    ${file.reference.mysql-connector-java-8.0.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
